// Code generated by lazyent. DO NOT EDIT.
syntax = "proto3";

package user.v1;

option go_package = "lazyent-test-app/user/v1;v1";
import "google/protobuf/timestamp.proto";
import "test.proto";
import "test222.proto";
import "buf/validate/validate.proto";

message Group {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 2; // 创建时间
  google.protobuf.Timestamp updated_at = 3; // 更新时间
  string name = 4;
  repeated User users_test = 5;
}

message GroupInput {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 2; // 创建时间
  google.protobuf.Timestamp updated_at = 3; // 更新时间
  string name = 4;
  repeated UserInput users_test = 5;
}

message Post {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 2; // 创建时间
  google.protobuf.Timestamp updated_at = 3; // 更新时间
  string title = 4;
  string content = 5;
  string slug = 6;
  string summary = 7;
  User author = 8;
  repeated User co_authors = 9;
  repeated string relevant_groups_id = 10;
  repeated string followers_id = 11;
  repeated string co_authors_archive_id = 12;
}

message PostInput {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 2; // 创建时间
  google.protobuf.Timestamp updated_at = 3; // 更新时间
  string title = 4;
  string content = 5;
  string slug = 6;
  string management_key = 7;
  UserInput author = 8;
  repeated string co_authors_id = 9;
  repeated string relevant_groups_id = 10;
  repeated UserInput co_authors_archive = 11;
}

enum UserStatus {
  USERSTATUS_UNSPECIFIED = 0;
  USERSTATUS_ACTIVE = 1;
  USERSTATUS_INACTIVE = 2;
  USERSTATUS_BANNED = 3;
}

message User {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 3; // 创建时间
  google.protobuf.Timestamp updated_at = 4; // 更新时间
  string name = 5;
  int32 age = 2;
  string nickname = 6;
  uint32 user_score = 7;
  bool is_verified = 8;
  repeated string tags = 9; // 用户标签
  string test_uuid = 10; // 测试UUID
  string test_nillable_uuid = 11; // 测试UUID2
  UserStatus status = 12;
  string role = 13; // 用户权限组
  string remote_token = 14; // 虚拟令牌，不存数据库
  int64 test_time = 15;
  string last_login_ip = 16; // 仅回包包含
  repeated string post_ids = 17;
  repeated Group groups = 18;
  repeated string followers_test = 19;
  repeated string co_authors_archive_test = 20;
  repeated User friends = 21;
  repeated User friends_virtual = 22;
  repeated VirtualUser friends_virtual_user = 23;
}

message UserInput {
  string uuid = 1; // 数据库主键
  google.protobuf.Timestamp created_at = 3; // 创建时间
  google.protobuf.Timestamp updated_at = 4; // 更新时间
  string name = 5 [(buf.validate.field).string.min_len = 1];
  int32 age = 2;
  string nickname = 6;
  uint32 user_score = 7;
  bool is_verified = 8;
  repeated string tags = 9; // 用户标签
  string password = 10;
  string test_uuid = 11; // 测试UUID
  string test_nillable_uuid = 12; // 测试UUID2
  UserStatus status = 13;
  string role = 14; // 用户权限组
  string remote_token = 15; // 虚拟令牌，不存数据库
  int64 test_time = 16;
  string verification_code = 17; // 仅入参包含
  repeated string post_ids = 18;
  repeated GroupInput groups = 19;
  repeated UserInput co_authors_archive_test = 20;
  repeated UserInput friends_virtual = 21;
  repeated VirtualUserInput friends_virtual_user = 22;
}

message VirtualUser {
  string uuid = 1; // 数据库主键
  string id_auth = 2; // 统一身份认证号
  string id_student = 3; // 学工号
  string info_name = 4; // 姓名
  int32 info_campus = 5; // 校区
  string info_qq = 6; // QQ
  string info_wechat = 7; // 微信
  string info_email = 8; // 邮箱
  string info_phone = 9; // 电话
  string info_custom = 10; // 默认特殊信息
  int32 info_gender = 11; // 性别
  bool lanker_valid = 12; // 是否为蓝客
  bool lanker_trainee = 13; // 是否为见习
  int32 lanker_sheets_completed = 14; // 完成单数
  double lanker_score = 15; // 积分
  string lanker_avatar_url = 16; // 头像
  string lanker_brief = 17; // 个人简介
  int32 lanker_department = 18; // 所在部门
  int32 lanker_spot = 19; // 职位
}

message VirtualUserInput {
  string uuid = 1; // 数据库主键
  string id_auth = 2; // 统一身份认证号
  string id_student = 3; // 学工号
  string info_name = 4; // 姓名
  int32 info_campus = 5; // 校区
  string info_qq = 6; // QQ
  string info_wechat = 7; // 微信
  string info_email = 8; // 邮箱
  string info_phone = 9; // 电话
  string info_custom = 10; // 默认特殊信息
  int32 info_gender = 11; // 性别
  bool lanker_valid = 12; // 是否为蓝客
  bool lanker_trainee = 13; // 是否为见习
  int32 lanker_sheets_completed = 14; // 完成单数
  double lanker_score = 15; // 积分
  string lanker_avatar_url = 16; // 头像
  string lanker_brief = 17; // 个人简介
  int32 lanker_department = 18; // 所在部门
  int32 lanker_spot = 19; // 职位
}
